# OP_SE2024

./: README.md
labwork1-suiremon-main/: CMakeLists.txt  README.md  main.cpp
labwork10-suiremon-main/: CMakeLists.txt  README.md
labwork10-suiremon-main/lib/: CMakeLists.txt  TTaskScheduler.cpp  TTaskScheduler.h
labwork10-suiremon-main/tests/: CMakeLists.txt  scheduler_tests.cpp
labwork11-suiremon-main/: CMakeLists.txt  README.md
labwork11-suiremon-main/lib/: CMakeLists.txt
labwork11-suiremon-main/lib/SearchEngine/: SearchEngine.cpp  SearchEngine.h
labwork11-suiremon-main/lib/Searcher/: Searcher.cpp  Searcher.h
labwork11-suiremon-main/tests/: CMakeLists.txt  searcher_tests.cpp
labwork2-suiremon-main/: README.md
labwork2-suiremon-main/lib/: number.cpp  number.h
labwork3-suiremon-main/: CMakeLists.txt  README.md
labwork3-suiremon-main/lib/: Bmp.cpp  Bmp.h  Parser.cpp  Parser.h  Sandpile.cpp  Sandpile.h
labwork4-suiremon-main/: README.md
labwork4-suiremon-main/lib/: ArgParser.cpp  ArgParser.h
labwork5-suiremon-main/: CMakeLists.txt  README.md
labwork5-suiremon-main/lib/: Array.cpp  Array.h  CMakeLists.txt
labwork5-suiremon-main/tests/: CMakeLists.txt  argparser_test.cpp
labwork6-suiremon-main/: CMakeLists.txt  README.md
labwork6-suiremon-main/lib/: Archiver.cpp  Archiver.h  CMakeLists.txt  Encoder.h  Parser.cpp  Parser.h
labwork7-suiremon-main/: CMakeLists.txt  README.md  config_example.json  weather.json
labwork7-suiremon-main/lib/: ConfigParser.cpp  ConfigParser.h  UI.cpp  UI.h  WeatherRequest.cpp  WeatherRequest.h
labwork8-suiremon-main/: CMakeLists.txt  README.md
labwork8-suiremon-main/lib/: BST.h
labwork8-suiremon-main/tests/: BST_tests.cpp
labwork9-suiremon-main/: CMakeLists.txt
labwork9-suiremon-main/lib/: Adapter.h  CMakeLists.txt
labwork9-suiremon-main/tests/: CMakeLists.txt  ranges_tests.cpp
